--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "sls:dev:clean": "sls remove --stage dev --config ",
     "sls:prod:clean": "sls remove --stage prod --config ",
     "types": "typechain --target ethers-v6 ./abis/*.json --out-dir ./src/types/typechain",
-    "solc:abis": "solc contracts/*.sol node_modules/@openzeppelin/contracts/governance/IGovernor.sol node_modules/@openzeppelin/contracts/interfaces/*.sol node_modules/@openzeppelin/contracts/access/*.sol  --abi -o ./abis --pretty-json --overwrite && ./src/renameAbis.sh"
+    "solc:abis": "solc contracts/*.sol node_modules/@openzeppelin/contracts/governance/IGovernor.sol node_modules/@openzeppelin/contracts/interfaces/*.sol node_modules/@openzeppelin/contracts/access/*.sol  --abi -o ./abis --pretty-json --overwrite && ./src/renameAbis.sh",
+    "monitors": "ts-node src/cli.js fromHHDeployMonitors --config ../defender.config.ts",
+    "contracts": "ts-node src/cli.js fromHHDeployContracts --config ../defender.config.ts"
   },
   "devDependencies": {
     "@openzeppelin/defender-base-client": "^1.46.0",
