--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "sls:prod:print": "STAGE=prod ts-node",
     "sls:dev:clean": "sls remove --stage dev --config ",
     "sls:prod:clean": "sls remove --stage prod --config ",
-    "types": "typechain --target ethers-v6 ./abis/*.json --out-dir ./src/types/typechain",
+    "types": "typechain --target ethers-v5 ./abis/*.json --out-dir ./src/types/typechain",
     "solc:abis": "solc contracts/*.sol node_modules/@openzeppelin/contracts/governance/IGovernor.sol node_modules/@openzeppelin/contracts/interfaces/*.sol node_modules/@openzeppelin/contracts/access/*.sol  --abi -o ./abis --pretty-json --overwrite && ./src/renameAbis.sh",
     "monitors": "ts-node src/cli.js fromHHDeployMonitors --config ../defender.config.ts",
     "contracts": "ts-node src/cli.js fromHHDeployContracts --config ../defender.config.ts"
@@ -23,7 +23,7 @@
     "@openzeppelin/defender-base-client": "^1.46.0",
     "@sandbox-smart-contracts/core": "^0.0.1",
     "@serverless/typescript": "^3.30.1",
-    "@typechain/ethers-v6": "^0.5.0",
+    "@typechain/ethers-v5": "^11.1.1",
     "@types/js-yaml": "^4.0.5",
     "@types/node": "^20.6.2",
     "@typescript-eslint/eslint-plugin": "^5.59.8",
@@ -36,7 +36,7 @@
     "eslint-plugin-json": "^3.1.0",
     "eslint-plugin-mocha": "^10.1.0",
     "eslint-plugin-prettier": "^4.2.1",
-    "ethers": "^6.6.4",
+    "ethers": "^5.7.0",
     "js-yaml": "^4.1.0",
     "prettier": "^2.8.8",
     "serverless": "^3.33.0",
@@ -45,9 +45,10 @@
     "typescript": "^5.2.2"
   },
   "dependencies": {
+    "@openzeppelin/defender-autotask-utils": "^1.48.0",
+    "@openzeppelin/defender-relay-client": "^1.48.0",
     "@openzeppelin/contracts": "^4.9.3",
     "@openzeppelin/defender-serverless": "^1.2.2",
-    "bottleneck": "^2.19.5",
     "hardhat": "^2.17.3",
     "minimatch": "^9.0.3",
     "solc": "^0.8.21",
