adding first autotasks

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,5 +14,6 @@
     "files": true
   },
   "files": ["src/solc.d.ts"],
-  "include": ["src/", "scripts/", "*.ts", "defender.config.ts", "solc.d.ts"]
+  "include": ["src/", "scripts/", "*.ts", "defender.config.ts", "solc.d.ts"],
+  "exclude": ["src/templates/functions/dist/", "node_modules/"]
 }
