--- a/.gitignore
+++ b/.gitignore
@@ -27,9 +27,9 @@ tsconfig.tsbuildinfo
 # Build artifacts
 **/.openzeppelin/
 types/**
-dist/
 abi/@openzeppelin
-defender/autotasks/compile
+compile
+dist
 
 # editors
 .idea
