--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,15 @@
     "files": true
   },
   "files": ["src/solc.d.ts"],
-  "include": ["src/", "scripts/", "*.ts", "defender.config.ts", "solc.d.ts"],
-  "exclude": ["src/templates/functions/dist/", "node_modules/"]
+  "include": [
+    "src/",
+    "scripts/",
+    "*.ts",
+    "defender.config.ts",
+    "solc.d.ts",
+    "rollup.config.js",
+    "templates",
+    "src/types"
+  ],
+  "exclude": ["templates/functions/dist", "node_modules/", "compile/", "dist/"]
 }
