--- a/package.json
+++ b/package.json
@@ -17,10 +17,15 @@
     "types": "typechain --target ethers-v5 ./abis/*.json --out-dir ./src/types/typechain",
     "solc:abis": "solc contracts/*.sol node_modules/@openzeppelin/contracts/governance/IGovernor.sol node_modules/@openzeppelin/contracts/interfaces/*.sol node_modules/@openzeppelin/contracts/access/*.sol  --abi -o ./abis --pretty-json --overwrite && ./src/renameAbis.sh",
     "monitors": "ts-node src/cli.js fromHHDeployMonitors --config ../defender.config.ts",
-    "contracts": "ts-node src/cli.js fromHHDeployContracts --config ../defender.config.ts"
+    "contracts": "ts-node src/cli.js fromHHDeployContracts --config ../defender.config.ts",
+    "build:functions": "tsc -p functions.tsconfig.json && rollup -c"
   },
   "devDependencies": {
     "@openzeppelin/defender-base-client": "^1.46.0",
+    "@rollup/plugin-commonjs": "^25.0.4",
+    "@rollup/plugin-json": "^6.0.0",
+    "@rollup/plugin-node-resolve": "^15.2.1",
+    "@rollup/plugin-yaml": "^4.1.1",
     "@sandbox-smart-contracts/core": "^0.0.1",
     "@serverless/typescript": "^3.30.1",
     "@typechain/ethers-v5": "^11.1.1",
@@ -28,6 +33,7 @@
     "@types/node": "^20.6.2",
     "@typescript-eslint/eslint-plugin": "^5.59.8",
     "@typescript-eslint/parser": "^6.7.2",
+    "builtin-modules": "^3.3.0",
     "cross-env": "^7.0.3",
     "dotenv": "^16.1.4",
     "dotenv-cli": "^7.2.1",
@@ -45,11 +51,12 @@
     "typescript": "^5.2.2"
   },
   "dependencies": {
-    "@openzeppelin/defender-autotask-utils": "^1.48.0",
-    "@openzeppelin/defender-relay-client": "^1.48.0",
     "@openzeppelin/contracts": "^4.9.3",
     "@openzeppelin/defender-serverless": "^1.2.2",
+    "defender-autotask-utils": "^1.44.0",
+    "defender-relay-client": "^1.44.0",
     "hardhat": "^2.17.3",
+    "lodash": "^4.17.21",
     "minimatch": "^9.0.3",
     "solc": "^0.8.21",
     "solc-typed-ast": "^16.1.0"
