--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
-  "name": "defender-monitoring",
-  "version": "1.0.0",
+  "name": "autodefender",
+  "version": "0.2.0",
   "main": "index.js",
+  "bin": {
+    "autodefend": "./src/cli.js"
+  },
   "license": "MIT",
   "engines": {
     "node": ">=18.0.0"
@@ -19,24 +22,22 @@
     "sls:prod:clean": "sls remove --stage prod --config ",
     "types": "typechain --target ethers-v5 ./abis/*.json --out-dir ./src/types/typechain",
     "solc:abis": "solc contracts/*.sol node_modules/@openzeppelin/contracts/governance/IGovernor.sol node_modules/@openzeppelin/contracts/interfaces/*.sol node_modules/@openzeppelin/contracts/access/*.sol  --abi -o ./abis --pretty-json --overwrite && ./src/renameAbis.sh",
-    "monitors": "ts-node src/cli.js fromHHDeployMonitors --config ../defender.config.ts",
-    "contracts": "ts-node src/cli.js fromHHDeployContracts --config ../defender.config.ts",
+    "monitors": "ts-node src/cli.js monitors --config ../defender.config.ts",
+    "contracts": "ts-node src/cli.js contracts --config ../defender.config.ts",
     "build:functions": "tsc -p functions.tsconfig.json && rollup -c"
   },
   "devDependencies": {
+    "@changesets/changelog-github": "^0.4.8",
+    "@changesets/cli": "^2.26.2",
     "@openzeppelin/defender-base-client": "^1.46.0",
-    "@rollup/plugin-commonjs": "^25.0.4",
-    "@rollup/plugin-json": "^6.0.0",
-    "@rollup/plugin-node-resolve": "^15.2.1",
-    "@rollup/plugin-yaml": "^4.1.1",
     "@sandbox-smart-contracts/core": "^0.0.1",
-    "@serverless/typescript": "^3.30.1",
     "@typechain/ethers-v5": "^11.1.1",
     "@types/js-yaml": "^4.0.5",
     "@types/node": "^20.6.2",
     "@typescript-eslint/eslint-plugin": "^5.59.8",
     "@typescript-eslint/parser": "^6.7.2",
     "builtin-modules": "^3.3.0",
+    "changeset": "^0.2.6",
     "cross-env": "^7.0.3",
     "dotenv": "^16.1.4",
     "dotenv-cli": "^7.2.1",
@@ -48,12 +49,16 @@
     "ethers": "^5.7.0",
     "js-yaml": "^4.1.0",
     "prettier": "^2.8.8",
+    "semver": "^7.5.4",
     "serverless": "^3.33.0",
-    "ts-node": "^10.9.1",
-    "typechain": "^8.3.1",
-    "typescript": "^5.2.2"
+    "typechain": "^8.3.1"
+
   },
   "dependencies": {
+    "@rollup/plugin-commonjs": "^25.0.4",
+    "@rollup/plugin-json": "^6.0.0",
+    "@rollup/plugin-node-resolve": "^15.2.1",
+    "@rollup/plugin-yaml": "^4.1.1",
     "@openzeppelin/contracts": "^4.9.3",
     "@openzeppelin/defender-serverless": "^1.2.2",
     "defender-autotask-utils": "^1.44.0",
@@ -62,6 +67,9 @@
     "lodash": "^4.17.21",
     "minimatch": "^9.0.3",
     "solc": "^0.8.21",
+    "typescript": "^5.2.2",
+    "@serverless/typescript": "^3.30.1",
+    "ts-node": "^10.9.1",
     "solc-typed-ast": "^16.1.0"
   }
 }
