--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "autodefender",
-  "version": "0.2.0",
+  "version": "0.3.0",
   "main": "index.js",
   "bin": {
     "autodefend": "./src/cli.js"
@@ -22,23 +22,37 @@
     "sls:prod:clean": "sls remove --stage prod --config ",
     "types": "typechain --target ethers-v5 ./abis/*.json --out-dir ./src/types/typechain",
     "solc:abis": "solc contracts/*.sol node_modules/@openzeppelin/contracts/governance/IGovernor.sol node_modules/@openzeppelin/contracts/interfaces/*.sol node_modules/@openzeppelin/contracts/access/*.sol  --abi -o ./abis --pretty-json --overwrite && ./src/renameAbis.sh",
-    "monitors": "ts-node src/cli.js monitors --config ../defender.config.ts",
-    "contracts": "ts-node src/cli.js contracts --config ../defender.config.ts",
-    "build:functions": "tsc -p functions.tsconfig.json && rollup -c"
+    "monitors": "export TS_NODE=true && ts-node src/cli.js monitors --config ./defender.config.ts",
+    "contracts": "export TS_NODE=true && ts-node src/cli.js contracts --config ./defender.config.ts",
+    "prebuild": "tsc -p src/functions/tsconfig.json && rollup -c",
+    "build": "tsc && cp src/autodefender.package.json dist/package.json",
+    "postbuild": "cp -r ./src/abis/ ./dist/abis/ && cp -r ./src/templates/messages/*.md ./dist/templates/messages/ && prettier --write \"dist/**/*.{ts,js,json}\""
   },
   "devDependencies": {
     "@changesets/changelog-github": "^0.4.8",
     "@changesets/cli": "^2.26.2",
+    "@types/yargs": "^17.0.26",
+    "changeset": "^0.2.6"
+  },
+  "dependencies": {
+    "@openzeppelin/contracts": "^4.9.3",
     "@openzeppelin/defender-base-client": "^1.46.0",
+    "@openzeppelin/defender-serverless": "^1.2.2",
+    "@rollup/plugin-commonjs": "^25.0.4",
+    "@rollup/plugin-json": "^6.0.0",
+    "@rollup/plugin-node-resolve": "^15.2.1",
+    "@rollup/plugin-yaml": "^4.1.1",
     "@sandbox-smart-contracts/core": "^0.0.1",
+    "@serverless/typescript": "^3.30.1",
     "@typechain/ethers-v5": "^11.1.1",
     "@types/js-yaml": "^4.0.5",
     "@types/node": "^20.6.2",
     "@typescript-eslint/eslint-plugin": "^5.59.8",
     "@typescript-eslint/parser": "^6.7.2",
     "builtin-modules": "^3.3.0",
-    "changeset": "^0.2.6",
     "cross-env": "^7.0.3",
+    "defender-autotask-utils": "^1.44.0",
+    "defender-relay-client": "^1.44.0",
     "dotenv": "^16.1.4",
     "dotenv-cli": "^7.2.1",
     "eslint": "^8.43.0",
@@ -47,29 +61,18 @@
     "eslint-plugin-mocha": "^10.1.0",
     "eslint-plugin-prettier": "^4.2.1",
     "ethers": "^5.7.0",
+    "hardhat": "^2.17.3",
     "js-yaml": "^4.1.0",
+    "lodash": "^4.17.21",
+    "minimatch": "^9.0.3",
     "prettier": "^2.8.8",
     "semver": "^7.5.4",
     "serverless": "^3.33.0",
-    "typechain": "^8.3.1"
-
-  },
-  "dependencies": {
-    "@rollup/plugin-commonjs": "^25.0.4",
-    "@rollup/plugin-json": "^6.0.0",
-    "@rollup/plugin-node-resolve": "^15.2.1",
-    "@rollup/plugin-yaml": "^4.1.1",
-    "@openzeppelin/contracts": "^4.9.3",
-    "@openzeppelin/defender-serverless": "^1.2.2",
-    "defender-autotask-utils": "^1.44.0",
-    "defender-relay-client": "^1.44.0",
-    "hardhat": "^2.17.3",
-    "lodash": "^4.17.21",
-    "minimatch": "^9.0.3",
     "solc": "^0.8.21",
-    "typescript": "^5.2.2",
-    "@serverless/typescript": "^3.30.1",
+    "solc-typed-ast": "^16.1.0",
     "ts-node": "^10.9.1",
-    "solc-typed-ast": "^16.1.0"
+    "typechain": "^8.3.1",
+    "typescript": "^5.2.2",
+    "yargs": "^17.7.2"
   }
 }
