--- a/src/functions/tsconfig.json
+++ b/src/functions/tsconfig.json
@@ -10,7 +10,7 @@
     "noUncheckedIndexedAccess": true,
     "moduleResolution": "node",
     "esModuleInterop": true,
-    "outDir": "./compile",
+    "outDir": "../../compile",
     "skipLibCheck": true,
     "allowJs": true,
     "resolveJsonModule": true
@@ -18,6 +18,5 @@
   "ts-node": {
     "transpileOnly": true
   },
-  "include": ["./src/functions"],
-  "exclude": ["dist", "compile", "node_modules/*/**", "deployments"]
+  "include": ["*.ts"]
 }
