--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,21 +8,13 @@
     "skipLibCheck": true,
     "resolveJsonModule": true,
     "allowJs": true,
-    "outDir": "./dist"
+    "declaration": true,
+    "outDir": "./dist",
+    "rootDir": "src"
   },
   "ts-node": {
     "files": true
   },
-  "files": ["src/solc.d.ts"],
-  "include": [
-    "src/",
-    "scripts/",
-    "*.ts",
-    "defender.config.ts",
-    "solc.d.ts",
-    "rollup.config.js",
-    "templates",
-    "src/types"
-  ],
-  "exclude": ["templates/functions/dist", "node_modules/", "compile/", "dist/"]
+  "include": ["src"],
+  "exclude": ["src/functions", "out"]
 }
