--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "contracts": "export TS_NODE=true && ts-node src/cli.js contracts --config ./defender.config.ts",
     "prebuild": "tsc -p src/functions/tsconfig.json && rollup -c",
     "build": "tsc && cp src/autodefender.package.json dist/package.json",
-    "postbuild": "cp -r ./src/abis/ ./dist/abis/ && cp -r ./src/templates/messages/*.md ./dist/templates/messages/ && prettier --write \"dist/**/*.{ts,js,json}\""
+    "postbuild": "cp README.md dist && cp -r ./src/abis/ ./dist/abis/ && cp -r ./src/templates/messages/*.md ./dist/templates/messages/ && prettier --write \"dist/**/*.{ts,js,json}\""
   },
   "devDependencies": {
     "@changesets/changelog-github": "^0.4.8",
